Se esta guardando los cambios hasta aca. Listo.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -31,7 +31,17 @@
       </b:carousel>
 
       <section>
-
+         <div class="col-md-8">
+            <b:row>
+               <b:image small-screen="one-third" value="../bootstrap/carousel/Valladolid-parque-1.jpg"
+                        tooltip="small-screen='one-third'"/>
+               <b:image small-screen="one-third" value="../bootstrap/carousel/Valladolid-parque-2.jpg"
+                        tooltip="small-screen='one-third'"/>
+               <b:image small-screen="one-third" hidden="tiny-screen"
+                        value="../bootstrap/carousel/Valladolid-parque-3.jpg"
+                        tooltip="small-screen='one-third' hidden='tiny-screen'"/>
+            </b:row>
+         </div>
       </section>
 
    </b:container>
