--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
    <title>Inicio</title>
-
+HOLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 </h:head>
 <h:body>
    <b:navBar brand="TouristTravel" brandHref="#">
