--- a/web/aboutUs.xhtml
+++ b/web/aboutUs.xhtml
@@ -27,6 +27,7 @@
             <b:image value="image/preview_4.jpg"/>
         </figure>
     </div>
+    </b:container>
     <footer>
 
     </footer>
