--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -13,7 +13,7 @@
       <b:navbarLinks>
          <b:navLink value="Home" href="#"></b:navLink>
          <b:navLink value="About Us" href="aboutUs.xhtml"></b:navLink>
-         <b:navLink value="Travel" href="#"></b:navLink>
+         <b:navLink value="Travel" href="travel.xhtml"></b:navLink>
          <b:navLink value="Contact Us" href="#"></b:navLink>
       </b:navbarLinks>
    </b:navBar>
