--- a/web/travel.xhtml
+++ b/web/travel.xhtml
@@ -22,7 +22,7 @@
         <b:column span="8">
             <b:column span="4">
             <b:thumbnail>
-                <img src="../image/location1.jpg" alt="Location1" />
+                <b:image value="../image/location1.jpg" alt="Location1" />
                 <f:facet name="caption">
                     <h3>Thumbnail label</h3>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
