Se esta guardando los cambios hasta aca. Listo.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -11,9 +11,9 @@
    <header>
       <b:navBar brand="TouristTravel" brandHref="#">
          <b:navbarLinks>
-            <b:navLink value="Home" href="index"></b:navLink>
+            <b:navLink value="Home" href="index.xhtml"></b:navLink>
             <b:navLink value="About Us" href="aboutUs.xhtml"></b:navLink>
-            <b:navLink value="Travel" href="#"></b:navLink>
+            <b:navLink value="Travel" href="travel.xhtml"></b:navLink>
             <b:navLink value="Contact Us" href="#"></b:navLink>
          </b:navbarLinks>
       </b:navBar>
