--- a/web/travel.xhtml
+++ b/web/travel.xhtml
@@ -18,24 +18,11 @@
         </b:navbarLinks>
     </b:navBar>
     <b:container>
-    <b:row>
-        <b:column span="8">
-            <b:column span="4">
-            <b:thumbnail>
-                <b:image value="../image/location1.jpg" alt="Location1" />
-                <f:facet name="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p>
-                        <b:button look="primary" value="Button"/>
-                        <b:button value="Button"/>
-                    </p>
-                </f:facet>
-            </b:thumbnail>
-            </b:column>
-            <b:column span="4">
+        <b:row>
+            <b:column span="8">
+                <b:column span="4">
                 <b:thumbnail>
-                    <img src="../image/location1.jpg" alt="Location1"/>
+                    <b:image value="image/location1.jpg"/>
                     <f:facet name="caption">
                         <h3>Thumbnail label</h3>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -45,25 +32,38 @@
                         </p>
                     </f:facet>
                 </b:thumbnail>
+                </b:column>
+                <b:column span="4">
+                    <b:thumbnail>
+                        <b:image value="image/location1.jpg"/>
+                        <f:facet name="caption">
+                            <h3>Thumbnail label</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p>
+                                <b:button look="primary" value="Button"/>
+                                <b:button value="Button"/>
+                            </p>
+                        </f:facet>
+                    </b:thumbnail>
+                </b:column>
+                <b:column span="4">
+                    <b:thumbnail>
+                        <b:image value="image/location1.jpg"/>
+                        <f:facet name="caption">
+                            <h3>Thumbnail label</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p>
+                                <b:button look="primary" value="Button"/>
+                                <b:button value="Button"/>
+                            </p>
+                        </f:facet>
+                    </b:thumbnail>
+                </b:column>
             </b:column>
-        <b:column span="4">
-             <b:thumbnail>
-                 <img src="../image/location1.jpg" alt="Location1"/>
-                    <f:facet name="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p>
-                            <b:button look="primary" value="Button"/>
-                            <b:button value="Button"/>
-                        </p>
-                    </f:facet>
-                </b:thumbnail>
-            </b:column>
-        </b:column>
-        <b:column span="4">
+            <b:column span="4">
 
-        </b:column>
-    </b:row>
+            </b:column>
+        </b:row>
     </b:container>
 </h:body>
 </html>
