--- a/web/traveldetails.xhtml
+++ b/web/traveldetails.xhtml
@@ -14,7 +14,7 @@
         <b:navLink value="Home" href="index.xhtml"></b:navLink>
         <b:navLink value="About Us" href="traverl.xhtml"></b:navLink>
         <b:navLink value="Travel" href="travel.xhtml"></b:navLink>
-        <b:navLink value="Contact Us" href="#"></b:navLink>
+        <b:navLink value="Contact Us" href="contactUs.xhtml"></b:navLink>
     </b:navbarLinks>
 </b:navBar>
 <b:container>
