--- a/web/travel.xhtml
+++ b/web/travel.xhtml
@@ -22,7 +22,7 @@
         <b:column span="8">
             <b:column span="4">
             <b:thumbnail>
-                <b:image value="../image/a.jpg" alt="Location1" />
+                <b:image value="../image/location.jpg" alt="Location1" />
                 <f:facet name="caption">
                     <h3>Thumbnail label</h3>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -62,7 +62,13 @@
         </b:column>
         <b:column span="4">
             <b:panel>
-
+                <h2>Search</h2>
+                <h:form id="search">
+                    <b:inputText id="namePlace" fieldId="namePlace" name="namePlace"
+                                 label="Place" render-label="true"/>
+                    <b:message for="@previous"/>
+                    <b:commandButton update="@form" value="Search" onclick="ajax:loginBean.login2()"/>
+                </h:form>
             </b:panel>
         </b:column>
     </b:row>
