--- a/web/travel.xhtml
+++ b/web/travel.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-    <title>Inicio</title>
+    <title> Travel </title>
 
 </h:head>
 <h:body>
@@ -22,39 +22,36 @@
         <b:column span="8">
             <b:column span="4">
             <b:thumbnail>
-                <b:image value="../image/location.jpg" alt="Location1" />
+                <b:image value="image/location.jpg" alt="Location1" />
                 <f:facet name="caption">
                     <h3>Thumbnail label</h3>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p>
-                        <b:button look="primary" value="Button"/>
-                        <b:button value="Button"/>
+                        <b:navCommandLink look="primary" value="More Information" href="traveldetails.xhtml"/>
                     </p>
                 </f:facet>
             </b:thumbnail>
             </b:column>
             <b:column span="4">
                 <b:thumbnail>
-                    <img src="../image/a.jpg" alt="Location1"/>
+                    <img src="image/location.jpg" alt="Location1"/>
                     <f:facet name="caption">
                         <h3>Thumbnail label</h3>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                         <p>
-                            <b:button look="primary" value="Button"/>
-                            <b:button value="Button"/>
+                            <b:navCommandLink look="primary" value="More Information" href="traveldetails.xhtml"/>
                         </p>
                     </f:facet>
                 </b:thumbnail>
             </b:column>
         <b:column span="4">
              <b:thumbnail>
-                 <img src="../image/a" alt="Location1"/>
+                 <img src="image/location.jpg" alt="Location1"/>
                     <f:facet name="caption">
                         <h3>Thumbnail label</h3>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                         <p>
-                            <b:button look="primary" value="Button"/>
-                            <b:button value="Button"/>
+                            <b:navCommandLink look="primary" value="More Information" href="traveldetails.xhtml"/>
                         </p>
                     </f:facet>
                 </b:thumbnail>
