--- a/web/aboutUs.xhtml
+++ b/web/aboutUs.xhtml
@@ -43,9 +43,33 @@
                 </div>
             </b:row>
             <b:row>
-                <b:image small-screen="one-third" value="image/preview_1.jpg"/>
-                <b:image small-screen="one-third" value="image/preview_2.jpg"/>
-                <b:image small-screen="one-third" value="image/preview_3.jpg"/>
+                <div class="col-md-4">
+                    <div>
+                        <img src="image/user.png" alt="Generic placeholder thumbnail"/>
+                    </div>
+                    <div>
+                        <p>Lucho Morales</p>
+                        <p>Jefe Comercial</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <img src="image/user.png" alt="Generic placeholder thumbnail"/>
+                    </div>
+                    <div>
+                        <p>Lucho Morales</p>
+                        <p>Jefe Comercial</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <img src="image/user.png" alt="Generic placeholder thumbnail"/>
+                    </div>
+                    <div>
+                        <p>Lucho Morales</p>
+                        <p>Jefe Comercial</p>
+                    </div>
+                </div>
             </b:row>
 
         </b:container>
