--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -61,7 +61,7 @@
                      <h:outputLabel for="firstname" value="Firstname"/>
                      <b:inputText id="firstname"/>
                      <h:outputLabel for="location" value="Location"/>
-                     <b:inputText id="location"/>
+                     <b:selectOneMenu value="#{hrservicefacade.)}" id="location"></b:selectOneMenu>
                      <h:outputLabel for="passages" value="Passages Quantity"/>
                      <b:inputText type="number" id="passages"/>
                      <h:outputLabel for="cost" value="Cost"/>
